# puppy

./: README.rst  setup.cfg  setup.py
src/puppy/: __init__.py  __main__.py
