[metadata]
name = puppy
version = 1.8.0
description = Puppy, a minimal GUI app to test pup
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/tmontes/puppy
keywords = gui, applications
author = Tiago Montes
author_email = tiago.montes@gmail.com
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    importlib-metadata==1.7.0
    importlib-resources==3.0.0
    pyserial==3.4

[options.packages.find]
where = src

[options.package_data]
* =
    *.png

[options.entry_points]
console_scripts =
    puppy = puppy.__main__:main
